feat(jqm-flip): Erste Tests mit jqm-Flip

--- a/test/jqmSnippet.html
+++ b/test/jqmSnippet.html
@@ -15,7 +15,12 @@
         <a href="#page2">To page2</a>
     </div>
     <div data-role="content">
-        <!-- put your sample code here -->
+        <div>
+            <select name="flip-1" id="flip-1" data-role="slider">
+                <option value="off">Off</option>
+                <option value="on">On</option>
+            </select>
+        </div>
     </div>
 </div>
 
@@ -25,7 +30,6 @@
         <h1>Page 2</h1>
     </div>
     <div data-role="content">
-
     </div>
 </div>
 
