--- a/test/ngSnippet.html
+++ b/test/ngSnippet.html
@@ -28,7 +28,15 @@
         <div jqm-page>
             <h1>Main page</h1>
             <a href="#/page2.html">To page2</a>
-            <!-- put your samle code here -->
+            <br />
+            <div>
+                <div jqm-flip>
+                    <select name="flip-1" id="flip-1">
+                        <option value="off" selected >Off</option>
+                        <option value="on" >On</option>
+                    </select>
+                </div>
+            </div>
         </div>
     </script>
 
@@ -36,6 +44,8 @@
         <!-- Another page -->
         <div jqm-page>
             <h1>Page 2</h1>
+            My Page
+            <div jqm-checkbox label="someLabel"></div>
         </div>
     </script>
 </head>
