--- a/test/jqmSnippet.html
+++ b/test/jqmSnippet.html
@@ -15,7 +15,8 @@
         <a href="#page2">To page2</a>
     </div>
     <div data-role="content">
-        <div>
+        <div class="container"
+                >
             <select name="flip-1" id="flip-1" data-role="slider">
                 <option value="off">Off</option>
                 <option value="on">On</option>
