feat(jqmButton): Inital jqmButton support added (jqmControlgroup not supported yet)
yet)

--- a/test/jqmSnippet.html
+++ b/test/jqmSnippet.html
@@ -15,40 +15,24 @@
         <h1>Main page</h1>
         <a href="#page2" data-transition="slide">To page2</a>
     </div>
-    <div data-role="content">
+    <div data-role="content"> 
         <!-- put your sample code here -->
-        <p>hello</p>
-        <p>hello</p>
-        <p>hello</p>
-        <p>hello</p>
-        <p>hello</p>
-        <p>hello</p>
-        <p>hello</p>
-        <p>hello</p>
-        <p>hello</p>
-        <p>hello</p>
-        <p>hello</p>
-        <p>hello</p>
-        <p>hello</p>
-        <p>hello</p>
-        <p>hello</p>
-        <p>hello</p>
-        <p>hello</p>
-        <p>hello</p>
-        <p>hello</p>
-        <p>hello</p>
-        <p>hello</p>
-        <p>hello</p>
-        <p>hello</p>
-        <p>hello</p>
-        <p>hello</p>
+          
+          <form action="http://Foobar3000.com/echo" method="GET" >
+            <input type="text" name="test" />
+            <button type="submit" id="hello" data-icon="delete" >Hello</button>
+          </form>
+    
+
+  
+  
 
     </div>
     <div data-role="footer" data-position="fixed" data-tap-toggle="false" data-id="foo1">
         <h1>Some footer</h1>
     </div>
-</div>
-
+</div> 
+ 
 <!-- Another page -->
 <div data-role="page" id="page2">
     <div data-role="header" data-position="fixed" data-tap-toggle="false">
@@ -62,7 +46,7 @@
     </div>
 </div>
 
-
+  <script type="text/javascript"></script>
 </body>
 
 </html>
