feat(jqmButton): Markup, Disabled, Mini für anker hinzugefügt.

--- a/test/ngSnippet.html
+++ b/test/ngSnippet.html
@@ -39,17 +39,16 @@
     <!-- the main page of your app -->
     <div jqm-page>
         <div jqm-header><h1>Page1</h1></div>
-        <div jqm-footer>
+     
+        <div>
+          <div id="hello" jqm-button="Button" disabled="disabled">button</div>
+
+        </div>
+           <div jqm-footer>
             <h1>Test fixed footer</h1>
         </div>
-        <a href="#/page2.html">To page2</a>
-
-        <p>hello</p>
-
-        <p>hello</p>
-
-        <p>hello</p>
-    </div>
+        
+    </div> 
 </script>
 
 <script type="text/ng-template" id="page2.html">
