--- a/test/jqmSnippet.html
+++ b/test/jqmSnippet.html
@@ -17,31 +17,7 @@
     </div>
     <div data-role="content">
         <!-- put your sample code here -->
-        <p>hello</p>
-        <p>hello</p>
-        <p>hello</p>
-        <p>hello</p>
-        <p>hello</p>
-        <p>hello</p>
-        <p>hello</p>
-        <p>hello</p>
-        <p>hello</p>
-        <p>hello</p>
-        <p>hello</p>
-        <p>hello</p>
-        <p>hello</p>
-        <p>hello</p>
-        <p>hello</p>
-        <p>hello</p>
-        <p>hello</p>
-        <p>hello</p>
-        <p>hello</p>
-        <p>hello</p>
-        <p>hello</p>
-        <p>hello</p>
-        <p>hello</p>
-        <p>hello</p>
-        <p>hello</p>
+        <button id="hello" data-disabled="true" >Hello</button>
 
     </div>
     <div data-role="footer" data-position="fixed" data-tap-toggle="false">
@@ -62,7 +38,9 @@
     </div>
 </div>
 
-
+  <script type="text/javascript">$(document).ready(function(){
+  $("button").button("disable");
+});</script>
 </body>
 
 </html>
