feat(jqmButton): Support for icon on anker buttons

--- a/test/jqmSnippet.html
+++ b/test/jqmSnippet.html
@@ -17,13 +17,13 @@
     </div>
     <div data-role="content">
         <!-- put your sample code here -->
-        <button id="hello" data-disabled="true" >Hello</button>
+        <a id="hello" data-role="button" data-icon="delete">Hello</a>
 
     </div>
     <div data-role="footer" data-position="fixed" data-tap-toggle="false">
         <h1>Some footer</h1>
     </div>
-</div>
+</div> 
 
 <!-- Another page -->
 <div data-role="page" id="page2">
@@ -38,9 +38,7 @@
     </div>
 </div>
 
-  <script type="text/javascript">$(document).ready(function(){
-  $("button").button("disable");
-});</script>
+  <script type="text/javascript"></script>
 </body>
 
 </html>
