--- a/test/ngSnippet.html
+++ b/test/ngSnippet.html
@@ -41,12 +41,12 @@
         <div jqm-header><h1>Page1</h1></div>
      
         <div>
-          <div id="hello" jqm-button="Button" disabled="disabled">button</div>
+          <a id="hello" href="http://google.de/" jqm-button jqm-button-icon="delete" >button</a>
 
         </div>
            <div jqm-footer>
             <h1>Test fixed footer</h1>
-        </div>
+          </div>
         
     </div> 
 </script>
