--- a/test/jqmSnippet.html
+++ b/test/jqmSnippet.html
@@ -15,16 +15,24 @@
         <h1>Main page</h1>
         <a href="#page2" data-transition="slide">To page2</a>
     </div>
-    <div data-role="content">
+    <div data-role="content"> 
         <!-- put your sample code here -->
-        <a id="hello" data-role="button" data-icon="delete">Hello</a>
+          
+          <form action="http://Foobar3000.com/echo" method="GET" >
+            <input type="text" name="test" />
+            <button type="submit" id="hello" data-icon="delete" >Hello</button>
+          </form>
+    
+
+  
+  
 
     </div>
     <div data-role="footer" data-position="fixed" data-tap-toggle="false">
         <h1>Some footer</h1>
     </div>
 </div> 
-
+ 
 <!-- Another page -->
 <div data-role="page" id="page2">
     <div data-role="header" data-position="fixed" data-tap-toggle="false">
